2009-01-12  Jason Merrill  <jason@redhat.com>

	PR c++/35109
	* g++.dg/lookup/friend11.C: Remove expected error.
	* g++.dg/lookup/friend14.C: New test.
	* g++.dg/lookup/friend15.C: New test.

2009-01-12  Dodji Seketeli  <dodji@redhat.com>

	PR c++/36019
	* g++.dg/lookup/hidden-class12.C: New test.
	* g++.dg/lookup/hidden-class13.C: New test.
	* g++.dg/lookup/hidden-class14.C: New test.
	* g++.dg/lookup/hidden-class15.C: New test.
	* g++.dg/lookup/hidden-class16.C: New test.

2009-01-12  Mark Mitchell  <mark@codesourcery.com>

	* gcc.dg/struct/wo_prof_single_str_global.c: Mask return value.
	* gcc.dg/struct/wo_prof_single_str_local.c: Mask return value.
	* gcc.dg/struct/wo_prof_single_str_pointer.c: Mask return value.

2009-01-12  Jason Merrill  <jason@redhat.com>

	PR c++/31488
	* g++.dg/other/vararg-3.C: New test.

2009-01-12  Daniel Jacobowitz  <dan@codesourcery.com>

	* gcc.target/powerpc/ppc-spe.c: Compile for all EABI targets.
	Explicitly enable SPE.
	* gcc.target/powerpc/20030505.c: Likewise.  Add dg-message
	directive.

	* gcc.target/powerpc/20030218-1.c: Pass -mfloat-gprs=single.
	Expect -flax-vector-conversions message.  Adjust incompatible
	types errors.
	* gcc.target/powerpc/spe1.c: Pass -mspe and -mfloat-gprs=single.
	Make Foo extern.

	* gcc.dg/cpp/assert4.c: Recognize __PPC__.

	* g++.dg/other/opaque-1.C: Run on targets with SPE.

	* g++.dg/ext/spe-1.C: Pass -mspe and -mfloat-gprs=single.
	* g++.dg/other/opaque-2.C: Likewise.
	* g++.dg/other/opaque-3.C: Likewise.

2009-01-12  Jakub Jelinek  <jakub@redhat.com>

	PR c/32041
	* gcc.dg/pr32041.c: New test.
	* g++.dg/parse/offsetof9.C: New test.

2009-01-12  Daniel Jacobowitz  <dan@codesourcery.com>
	    Nathan Froyd  <froydnj@codesourcery.com>

	* g++.dg/conversion/simd1.C: Ignore irrelevant warning.
	* g++.dg/ext/attribute-test-1.C: Likewise.
	* g++.dg/ext/attribute-test-2.C: Likewise.
	* g++.dg/ext/attribute-test-3.C: Likewise.
	* g++.dg/ext/attribute-test-4.C: Likewise.
